bindings/c/include/proven.h

/** @brief Result for boolean operations */
typedef struct { int32_t status; bool value; } ProvenBoolResult;
/** @brief Image reference parse result. */
typedef struct {
    int32_t              status;
    ProvenImageReference reference;
} ProvenImageRefResult;
/**
 * @brief Parse OCI image reference (e.g., "ghcr.io/user/repo:v1.0").
 *
 * Format: [registry/]repository[:tag][@digest]
 * Handles Docker Hub conventions (library/ prefix, docker.io default).
 */
ProvenImageRefResult proven_registry_parse(const uint8_t* ptr, size_t len);
/** @brief Digest with algorithm and hex value. */
typedef struct {
    ProvenHashAlgorithm algorithm;
    char*               value;
    size_t              value_len;
} ProvenDigest;
/** @brief Digest parse result. */
typedef struct {
    int32_t      status;
    ProvenDigest digest;
} ProvenDigestResult;
/**
 * @brief Parse digest string (e.g., "sha256:abc123...").
 * @return Result with parsed digest.
 */
ProvenDigestResult proven_digest_parse(const uint8_t* ptr, size_t len);
/**
 * @brief Constant-time digest comparison (timing-attack resistant).
 * @return Result with verification status.
 */
ProvenBoolResult proven_digest_verify(const ProvenDigest* expected, const ProvenDigest* actual);