bindings/ada/src/proven-ffi.ads


   function Phone_Get_Calling_Code (Code : int) return unsigned_short;
   pragma Import (C, Phone_Get_Calling_Code, "phone_get_calling_code");

   function Phone_Digit_Count
     (Number : access constant C_Phone_Number) return size_t;
   pragma Import (C, Phone_Digit_Count, "phone_digit_count");

   ---------------------------------------------------------------------------
   --  SafeDigest
   ---------------------------------------------------------------------------

   function Digest_Parse
     (Input : chars_ptr; Len : size_t) return Digest_Result;
   pragma Import (C, Digest_Parse, "proven_digest_parse");

   function Digest_Verify
     (Expected, Actual : access C_Digest) return Bool_Result;
   pragma Import (C, Digest_Verify, "proven_digest_verify");

   ---------------------------------------------------------------------------
   --  SafeRegistry
   ---------------------------------------------------------------------------

   function Registry_Parse
     (Input : chars_ptr; Len : size_t) return Image_Ref_Result;
   pragma Import (C, Registry_Parse, "proven_registry_parse");

end Proven.FFI;
